tests/e2e/validation-webhook/validation/invalid-output-type/policy.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: invalid-output-type
spec:
  evaluation:
    mode: Envoy
  validations:
  - expression: >
      'bye'
