tests/e2e/validation-webhook/validation/invalid-output-type/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: invalid-output-type
spec:
  steps: 
  - try:
    - create:
        file: ./policy.yaml
        expect:
        - check:
            ($error): |-
              admission webhook "kyverno-authz-server-validation-authorizationpolicy.kyverno.svc" denied the request: AuthorizationPolicy.envoy.kyverno.io "invalid-output-type" is invalid: spec.deny[0].response: Invalid value: "'bye'\n": rule response output is expected to be of type envoy.service.auth.v3.CheckResponse
